--- a/DogeWalletC/DogeWalletC.csproj
+++ b/DogeWalletC/DogeWalletC.csproj
@@ -195,6 +195,7 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="cw.png" />
     <Content Include="FlipCycleTileMedium.png" />
     <Content Include="FlipCycleTileSmall.png" />
     <Content Include="SquareTile150x150.png" />
