--- a/MultiWallet v2/MultiWallet/MultiWallet/MultiWallet.csproj
+++ b/MultiWallet v2/MultiWallet/MultiWallet/MultiWallet.csproj
@@ -96,6 +96,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Receive.xaml.cs">
+      <DependentUpon>Receive.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Scan.xaml.cs">
       <DependentUpon>Scan.xaml</DependentUpon>
     </Compile>
@@ -148,6 +151,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Receive.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Scan.xaml">
       <SubType>Designer</SubType>
